# GameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindGLFW.cmake  FindGLM.cmake
assets/: manifest
assets/shaders/: globals.glsl  standard.frag  standard.vert
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  asset.h  assetmanager.cpp  assetmanager.h  gfxpipeline.cpp  gfxpipeline.h  io.cpp  io.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  windowmanager.cpp  windowmanager.h
src/engine/assets/: asset.h  assetmanager.cpp  assetmanager.h  mesh.cpp  mesh.h
src/engine/graphics/: gfxpipeline.cpp  gfxpipeline.h  renderable.h  shaderprogram.cpp  shaderprogram.h
src/engine/scene/: cameracomponent.cpp  cameracomponent.h  meshcomponent.cpp  meshcomponent.h  scene.cpp  scene.h  sceneobject.h  transform.h
src/engine/utilities/: io.cpp  io.h  windowmanager.cpp
src/game/: CMakeLists.txt  app.cpp  app.h  main.cpp
